substituindo uma imagem

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <article>
                 <section class="sobre">
                     <h2 class="sobre__titulo">Sobre nosso Hotel</h2>
-                    <img src="images/33580421.jpg" alt="" />
+                    <img src="images/sobre.jpg" alt="" />
                     <p>
                         Com mais de 30 anos no ramo hoteleiro, o Paraíso Web é um hotel luxuoso localizado na bela cidade
                         costeira de Boa Prática, no nordeste do Brasil. Com vista para o Oceano Atlântico, o hotel oferece aos hóspedes
